fix 4 and 5: now you cannot add any task that is not in the possibilities of the form