@@ -2,8 +2,6 @@
 package acme.features.technician.involves;
 
 import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -63,15 +61,16 @@ public class TechnicianInvolvesCreateService extends AbstractGuiService<Technici
 	@Override
 	public void validate(final Involves involves) {
 		{
-			Collection<Involves> alreadyCreatedInvolves;
-			Collection<Task> involvesTasks;
-			boolean involvesTaskIsNew;
+			Collection<Task> possibleTasks;
+			Collection<Task> alreadyAddedTasks;
+			boolean involvesTaskIsPossible;
 
-			alreadyCreatedInvolves = this.repository.findInvolvesByMaintenanceRecordId(involves.getMaintenanceRecord().getId());
-			involvesTasks = alreadyCreatedInvolves == null ? List.of() : alreadyCreatedInvolves.stream().map(Involves::getTask).toList();
-			involvesTaskIsNew = !involvesTasks.contains(involves.getTask());
+			possibleTasks = this.repository.findTasksPublished();
+			alreadyAddedTasks = this.repository.findInvolvesByMaintenanceRecordId(involves.getMaintenanceRecord().getId()).stream().map(Involves::getTask).toList();
+			possibleTasks.removeAll(alreadyAddedTasks);
+			involvesTaskIsPossible = possibleTasks.contains(involves.getTask());
 
-			super.state(involvesTaskIsNew, "*", "acme.validation.involves.involves-is-new");
+			super.state(involvesTaskIsPossible, "*", "acme.validation.involves.involves-is-possible");
 		}
 	}
 
@@ -91,7 +90,7 @@ public class TechnicianInvolvesCreateService extends AbstractGuiService<Technici
 		maintenanceRecordId = super.getRequest().getData("maintenanceRecordId", int.class);
 
 		possibleTasks = this.repository.findTasksPublished();
-		alreadyAddedTasks = this.repository.findInvolvesByMaintenanceRecordId(maintenanceRecordId).stream().map(Involves::getTask).collect(Collectors.toList());
+		alreadyAddedTasks = this.repository.findInvolvesByMaintenanceRecordId(maintenanceRecordId).stream().map(Involves::getTask).toList();
 		possibleTasks.removeAll(alreadyAddedTasks);
 
 		taskChoices = SelectChoices.from(possibleTasks, "description", involves.getTask());
